Made animation align correctly

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 #menu-btn {
 	float: right;
 	width: 20px;
-	height: 20px;
+	height: 17px;
 	margin-top: 19px;
 	-webkit-transform: rotate(0deg);
 	-moz-transform: rotate(0deg);
@@ -31,67 +31,57 @@
 }
 
 #menu-btn span:nth-child(even) {
-  left: 50%;
+	left: 50%;
 }
-
 #menu-btn span:nth-child(odd) {
-  left:0px;
+	left:0px;
 }
-
 #menu-btn span:nth-child(1), #menu-btn span:nth-child(2) {
-  top: 0px;
+	top: 0px;
 }
-
 #menu-btn span:nth-child(3), #menu-btn span:nth-child(4) {
-  top: 7px;
+	top: 7px;
 }
-
 #menu-btn span:nth-child(5), #menu-btn span:nth-child(6) {
-  top: 14px;
+	top: 14px;
 }
 
 #menu-btn.open span:nth-child(1),#menu-btn.open span:nth-child(6) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
-
 #menu-btn.open span:nth-child(2),#menu-btn.open span:nth-child(5) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
 }
 
 #menu-btn.open span:nth-child(1) {
   left: 2px;
-  top: 3px;
+  top: 4px;
 }
-
 #menu-btn.open span:nth-child(2) {
   left: calc(50% - 2px);
-  top: 3px;
+  top: 4px;
 }
-
 #menu-btn.open span:nth-child(3) {
   left: -50%;
   opacity: 0;
 }
-
 #menu-btn.open span:nth-child(4) {
   left: 100%;
   opacity: 0;
 }
-
 #menu-btn.open span:nth-child(5) {
   left: 2px;
-  top: 9px;
+  top: 11px;
 }
-
 #menu-btn.open span:nth-child(6) {
   left: calc(50% - 2px);
-  top: 9px;
+  top: 11px;
 }
 
 
